syntax = "proto3";
import "common_proto/common.proto";
option cc_generic_services = true;

message TipsS2C
{
	Tips tips = 1;
}

service ClientPlayerCommonService 
{
  rpc PushTipsS2C (TipsS2C) returns (TipsS2C);
}